--- a/src/web/blog/app/templates/article.html
+++ b/src/web/blog/app/templates/article.html
@@ -4,10 +4,13 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="/static/css/style.css" />
         <title>Blog</title>
     </head>
     <body>
-        <h1>{{ article.title }}</h1>
-        <div>{{ article.body }}</div>
+        <article>
+            <h1 class="title">{{ article.title }}</h1>
+            <div class="body">{{ article.body }}</div>
+        </article>
     </body>
 </html>
