--- a/src/web/blog/app/templates/index.html
+++ b/src/web/blog/app/templates/index.html
@@ -4,15 +4,19 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="/static/css/style.css" />
         <title>Blog</title>
     </head>
     <body>
-        {% for article in articles %}
-        <div>
-            <a href="/articles?title={{ article.path }}">
-                {{ article.title }}
-            </a>
-        </div>
-        {% endfor %}
+        <h1>Blog</h1>
+        <section class="articles">
+            {% for article in articles %}
+            <div class="article">
+                <a class="link" href="/articles?title={{ article.path }}">
+                    {{ article.title }}
+                </a>
+            </div>
+            {% endfor %}
+        </section>
     </body>
 </html>
